--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
       CDK_CLUSTERS_0_COLOR: "#0013E7"
       CDK_CLUSTERS_0_BOOTSTRAPSERVERS: "PLAINTEXT://kafka1:19092"
       # CONSOLE_JAVA_OPTS: "-XX:UseSVE=0"
-  kafka1:
+  kafka:
     image: confluentinc/cp-kafka:8.0.0
     hostname: kafka1
     container_name: kafka1
@@ -53,7 +53,7 @@ services:
     hostname: ksqldb-server
     container_name: ksqldb-server
     depends_on:
-      - kafka1
+      - kafka
     ports:
       - "8088:8088"   # REST API ksqlDB
     environment:
