--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -64,6 +64,26 @@ services:
       KSQL_KSQL_SERVICE_ID: "crypto-ksqldb"
       KSQL_AUTO_OFFSET_RESET: "earliest"
 
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.15.2
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+    ports:
+      - "9200:9200"
+    volumes:
+      - es_data:/usr/share/elasticsearch/data
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.15.2
+    depends_on:
+      - elasticsearch
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+
 volumes:
+  es_data: {}
   pg_data: {}
   conduktor_data: {}
