--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,36 +2,43 @@ services:
   postgresql:
     image: postgres:14
     hostname: postgresql
-    volumes:
-      - pg_data:/var/lib/postgresql/data
+    container_name: crypto-realtime-ingestion-postgresql
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_DB: "conduktor-console"
       POSTGRES_USER: "conduktor"
       POSTGRES_PASSWORD: "some_password"
       POSTGRES_HOST_AUTH_METHOD: "scram-sha-256"
+    volumes:
+      - pg_data:/var/lib/postgresql/data
 
   conduktor-console:
     image: conduktor/conduktor-console:1.36.2
+    container_name: crypto-realtime-ingestion-conduktor-console
+    depends_on:
+      - postgresql
+      - kafka
     ports:
       - "8080:8080"
-    volumes:
-      - conduktor_data:/var/conduktor
     environment:
       CDK_DATABASE_URL: "postgresql://conduktor:some_password@postgresql:5432/conduktor-console"
       CDK_CLUSTERS_0_ID: "default"
       CDK_CLUSTERS_0_NAME: "My Local Kafka Cluster"
       CDK_CLUSTERS_0_COLOR: "#0013E7"
       CDK_CLUSTERS_0_BOOTSTRAPSERVERS: "PLAINTEXT://kafka:19092"
+    volumes:
+      - conduktor_data:/var/conduktor
 
   kafka:
     image: confluentinc/cp-kafka:8.0.0
-    hostname: kafka
     container_name: kafka
+    hostname: kafka
     ports:
       - "9092:9092"
       - "29092:29092"
-      - "9999:9999"  # JMX (optional)
-      - "9099:9099"  # Controller listener (KRaft)
+      - "9999:9999"
+      - "9099:9099"
     environment:
       CLUSTER_ID: MkU3OEVBNTcwNTJENDM2Qk
       KAFKA_NODE_ID: 1
@@ -42,7 +49,6 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT,CONTROLLER:PLAINTEXT
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
@@ -51,14 +57,13 @@ services:
 
   ksqldb-server:
     image: confluentinc/ksqldb-server:0.29.0
-    hostname: ksqldb-server
     container_name: ksqldb-server
+    hostname: ksqldb-server
     depends_on:
       - kafka
     ports:
       - "8088:8088"
     environment:
-      KSQL_CONFIG_DIR: "/etc/ksqldb"
       KSQL_BOOTSTRAP_SERVERS: "kafka:19092"
       KSQL_LISTENERS: "http://0.0.0.0:8088"
       KSQL_KSQL_SERVICE_ID: "crypto-ksqldb"
@@ -66,45 +71,37 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.15.2
-    environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - ELASTICSEARCH_USERNAME=elastic
-      - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD}
-      - XPACK_SECURITY_ENABLED=true
+    container_name: elasticsearch
     ports:
-    - "9200:9200"
+      - "9200:9200"
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
     volumes:
-    - es_data:/usr/share/elasticsearch/data
+      - es_data:/usr/share/elasticsearch/data
 
-      
   kibana:
     image: docker.elastic.co/kibana/kibana:8.15.2
+    container_name: kibana
     ports:
-    - "5601:5601"
+      - "5601:5601"
     environment:
       - SERVER_NAME=kibana
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - ELASTICSEARCH_SERVICEACCOUNT_TOKEN=${KIBANA_SERVICE_TOKEN}
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5601/api/status"]
-      interval: 10s
-      timeout: 10s
-      retries: 10
 
   dashboards:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: crypto-realtime-ingestion-dashboards
     depends_on:
       - kibana
       - elasticsearch
     environment:
       APP: dashboards
       KIBANA_URL: http://kibana:5601
-      KIBANA_API_KEY: ${KIBANA_API_KEY}
-      INDEX_NAME: crypto
-    networks:
-      - default
+      INDEX_NAME: crypto-btc
+    restart: unless-stopped
 
 volumes:
   es_data: {}
