--- a/CryptoDataConsumers/build.gradle
+++ b/CryptoDataConsumers/build.gradle
@@ -43,3 +43,7 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+application {
+    mainClass = "io.crypto.realtime.consumers.btc.BtcConsumer"
+}
