--- a/CryptoDataProducers/build.gradle
+++ b/CryptoDataProducers/build.gradle
@@ -35,3 +35,7 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+application {
+    mainClass = "io.crypto.realtime.consumers.btc.BtcProducer"
+}
