--- a/CryptoDataProducers/build.gradle
+++ b/CryptoDataProducers/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'application'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'io.crypto.realtime.producer'
@@ -37,6 +37,11 @@ test {
     useJUnitPlatform()
 }
 
-application {
-    mainClass = "io.crypto.realtime.consumers.btc.BtcProducer"
+shadowJar {
+    archiveBaseName.set('producer')
+    archiveVersion.set('')
+    archiveClassifier.set('all')
+    manifest {
+        attributes 'Main-Class': 'io.crypto.realtime.producers.btc.BtcProducer'
+    }
 }
